--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>olivia jack
+    <title>coletivo duodeno
     </title>
     <link rel="alternate" href="https://ojack.github.io/feed.xml" type="application/rss+xml" title="portfolio">
     <link rel="icon" type="image/png" href="https://ojack.github.io/triangle-basic.png">
@@ -23,22 +23,21 @@
     <header class="header">
       <div class="menu">
         <ul id="topBar" class="menuBar">
-          <li id="name"><a href="https://ojack.github.io">olivia jack</a></li>
-          <li><a href="https://ojack.github.io">Work</a></li>
-          <li><a href="https://ojack.github.io/archive.html">Contact</a></li>
+          <li id="name"><a href="https://ojack.github.io">coletivo duodeno</a></li>
+          <li><a href="https://ojack.github.io">Projetos</a></li>
+          <li><a href="https://ojack.github.io/archive.html">Contato</a></li>
         </ul>
       </div>
     </header>
     <div id="content">
       <ul id="filters" class="menuBar">
-        <li id="show-all">Show All</li>
-        <li class="filter">cartography</li>
-        <li class="filter">d3</li>
-        <li class="filter">javascript</li>
-        <li class="filter">processing</li>
-        <li class="filter">nodejs</li>
-        <li class="filter">museum</li>
-        <li class="filter">performance</li>
+        <li id="show-all">Mostrar Tudo</li>
+        <li class="filter">Eletrônica</li>
+        <li class="filter">Programação</li>
+        <li class="filter">Educação</li>
+        <li class="filter">Arte</li>
+        <li class="filter">Ciência da Computação</li>
+        <li class="filter">Maker</li>
       </ul>
       <section id="container-holder">
         <div id="container">
