--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class="nav">
         </div>
         <section class="copy">
-          <p>&copy; 2016 Olivia Jack</p>
+          <p>&copy; 2018 Coletivo Duodeno</p>
         </section>
       </div>
     </footer>
