--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>coletivo duodeno
     </title>
-    <link rel="alternate" href="https://pamelapaulinocerejo.github.io/duodeno.github.io//feed.xml" type="application/rss+xml" title="portfolio">
-    <link rel="icon" type="image/png" href="https://pamelapaulinocerejo.github.io/duodeno.github.io//triangle-basic.png">
+    <link rel="alternate" href="https://pamelapaulinocerejo.github.io/duodeno.github.io/feed.xml" type="application/rss+xml" title="portfolio">
+    <link rel="icon" type="image/png" href="https://pamelapaulinocerejo.github.io/duodeno.github.io/triangle-basic.png">
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic|Anonymous+Pro:400,700,400italic,700italic|Merriweather:400,700,300">
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Inconsolata:400,700">
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Rajdhani:400,700,300">
-    <link rel="stylesheet" href="https://duodeno.github.io/css/newstyle.css">
-    <link rel="stylesheet" href="https://duodeno.github.io/css/isotope.css">
+    <link rel="stylesheet" href="https://pamelapaulinocerejo.github.io/duodeno.github.io/css/newstyle.css">
+    <link rel="stylesheet" href="https://pamelapaulinocerejo.github.io/duodeno.github.io/css/isotope.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-    <script type="text/javascript" src="https://pamelapaulinocerejo.github.io/duodeno.github.io//js/jquery.min.js"></script>
-    <script type="text/javascript" src="https://pamelapaulinocerejo.github.io/duodeno.github.io//js/jquery.slug.js"></script>
-    <script src="https://pamelapaulinocerejo.github.io/duodeno.github.io//js/isotope.pkgd.min.js"></script>
-    <script type="text/javascript" src="https://pamelapaulinocerejo.github.io/duodeno.github.io//js/index.js"></script>
+    <script type="text/javascript" src="https://pamelapaulinocerejo.github.io/duodeno.github.io/js/jquery.min.js"></script>
+    <script type="text/javascript" src="https://pamelapaulinocerejo.github.io/duodeno.github.io/js/jquery.slug.js"></script>
+    <script src="https://pamelapaulinocerejo.github.io/duodeno.github.io/js/isotope.pkgd.min.js"></script>
+    <script type="text/javascript" src="https://pamelapaulinocerejo.github.io/duodeno.github.io/js/index.js"></script>
   </head>
   <body>
     <header class="header">
@@ -25,7 +25,7 @@
         <ul id="topBar" class="menuBar">
           <li id="name"><a href="https://pamelapaulinocerejo.github.io/duodeno.github.io/">coletivo duodeno</a></li>
           <li><a href="https://pamelapaulinocerejo.github.io/duodeno.github.io/">Projetos</a></li>
-          <li><a href="https://pamelapaulinocerejo.github.io/duodeno.github.io//archive.html">Contato</a></li>
+          <li><a href="https://pamelapaulinocerejo.github.io/duodeno.github.io/archive.html">Contato</a></li>
         </ul>
       </div>
     </header>
