--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <header class="header">
       <div class="menu">
         <ul id="topBar" class="menuBar">
-          <li id="name"><a href="https://pamelapaulinocerejo.github.io/duodeno.github.io/">coletivo duodeno</a></li>
-          <li><a href="https://pamelapaulinocerejo.github.io/duodeno.github.io/">Projetos</a></li>
+          <li id="name"><a href="https://pamelapaulinocerejo.github.io/duodeno.github.io">coletivo duodeno</a></li>
+          <li><a href="https://pamelapaulinocerejo.github.io/duodeno.github.io">Projetos</a></li>
           <li><a href="https://pamelapaulinocerejo.github.io/duodeno.github.io/archive.html">Contato</a></li>
         </ul>
       </div>
