--- a/archive.html
+++ b/archive.html
@@ -5,45 +5,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>contact</title>
-    <link rel="alternate" href="https://ojack.github.io/feed.xml" type="application/rss+xml" title="portfolio">
-    <link rel="icon" type="image/png" href="https://ojack.github.io/triangle-basic.png">
+    <link rel="alternate" href="https://pamelapaulinocerejo.github.io/duodeno.github.io/feed.xml" type="application/rss+xml" title="portfolio">
+    <link rel="icon" type="image/png" href="https://pamelapaulinocerejo.github.io/duodeno.github.io/triangle-basic.png">
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic|Anonymous+Pro:400,700,400italic,700italic|Merriweather:400,700,300">
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Inconsolata:400,700">
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Rajdhani:400,700,300">
-    <link rel="stylesheet" href="https://ojack.github.io/css/newstyle.css">
+    <link rel="stylesheet" href="https://pamelapaulinocerejo.github.io/duodeno.github.io/css/newstyle.css">
   </head>
   <body class="article-detail">
     <header class="header">
       <div class="menu">
         <ul id="topBar" class="menuBar">
-          <li id="name"><a href="https://ojack.github.io">olivia jack</a></li>
-          <li><a href="https://ojack.github.io">Work</a></li>
-          <li><a href="https://ojack.github.io/archive.html">Contact</a></li>
+          <li id="name"><a href="https://pamelapaulinocerejo.github.io/duodeno.github.io">coletivo duodeno</a></li>
+          <li><a href="https://pamelapaulinocerejo.github.io/duodeno.github.io">Projetos</a></li>
+          <li><a href="https://pamelapaulinocerejo.github.io/duodeno.github.io/archive.html">Contato</a></li>
         </ul>
       </div>
     </header>
     <div id="content">
-      <div class="content-wrap"><p>coder + cartographer who likes to collaborate =)</p>
+      <div class="content-wrap"><p></p>
 <p>Email me: <a href="mailto:rhizomaticode@gmail.com">rhizomaticode[at]gmail.com</a></p>
 <p><img src="/me.jpg" alt="me"></p>
 <p><a href="http://github.com/ojack">Github</a> - <a href="/OLIVIA_JACK_RESUME_11_7.pdf">CV</a> -  <a href="http://ojack.tumblr.com">Tumblr</a>  - <a href="https://twitter.com/rhizomaticode">Twitter</a></p>
 <hr>
-<h2 id="recent-presentations-">Recent Presentations:</h2>
-<p>“Drawing with code: Javascript and analog creativity”, CaliJS, Universidad Javeriana, Cali,
-Colombia. Oct 24, 2014</p>
-<p>“Workshop: Mapping Repression and Resistance in the Bay Area”, LOL Oakland Makerspace,
-Oakland, CA. Aug 17, 2014</p>
-<p>“Intro to Creative Coding” Bay Area Video Coalition, San Francisco, CA. Mar 28, 2014</p>
-<p>“Ellis Act Evictions”. Mapping and its Discontents, UC Berkeley, CA. Nov 1, 2013</p>
-<p>“Maps that Move”, CARTography GeoMixer, San Francisco Design Week, June 18, 2014</p>
+<h2 id="recent-presentations-">Atividades Recentes:</h2>
+<--!<p>“Drawing with code: Javascript and analog creativity”, CaliJS, Universidad Javeriana, Cali,
+Colombia. Oct 24, 2014</p>-->
+
 
       </div>
     </div>
     <footer>
       <div class="content-wrap">
-        <div class="nav"><a href="/">« Home</a></div>
+        <div class="nav"><a href="/">« Início</a></div>
         <section class="copy">
-          <p>&copy; 2016 Olivia Jack</p>
+          <p>&copy; 2018 Coletivo Duodeno</p>
         </section>
       </div>
     </footer>
