--- a/archive.html
+++ b/archive.html
@@ -37,7 +37,7 @@ Colombia. Oct 24, 2014</p>-->
     </div>
     <footer>
       <div class="content-wrap">
-        <div class="nav"><a href="https://pamelapaulinocerejo.github.io/duodeno.github.io/">« Início</a></div>
+        <div class="nav"><a href="/https://pamelapaulinocerejo.github.io/duodeno.github.io/">« Início</a></div>
         <section class="copy">
           <p>&copy; 2018 Coletivo Duodeno</p>
         </section>
