--- a/archive.html
+++ b/archive.html
@@ -29,8 +29,8 @@
 <p><a href="http://github.com/ojack">Github</a> - <a href="/OLIVIA_JACK_RESUME_11_7.pdf">CV</a> -  <a href="http://ojack.tumblr.com">Tumblr</a>  - <a href="https://twitter.com/rhizomaticode">Twitter</a></p>
 <hr>
 <h2 id="recent-presentations-">Atividades Recentes:</h2>
-<--!<p>“Drawing with code: Javascript and analog creativity”, CaliJS, Universidad Javeriana, Cali,
-Colombia. Oct 24, 2014</p>-->
+<p>“Drawing with code: Javascript and analog creativity”, CaliJS, Universidad Javeriana, Cali,
+Colombia. Oct 24, 2014</p>
 
 
       </div>
