--- a/archive.html
+++ b/archive.html
@@ -25,7 +25,7 @@
     <div id="content">
       <div class="content-wrap"><p></p>
 <p>Email me: <a href="mailto:rhizomaticode@gmail.com">rhizomaticode[at]gmail.com</a></p>
-<p><img src="/me.jpg" alt="me"></p>
+<p><img src="/21150875_1450445635035080_1993899969_n.jpg" alt="me"></p>
 <p><a href="http://github.com/ojack">Github</a> - <a href="/OLIVIA_JACK_RESUME_11_7.pdf">CV</a> -  <a href="http://ojack.tumblr.com">Tumblr</a>  - <a href="https://twitter.com/rhizomaticode">Twitter</a></p>
 <hr>
 <h2 id="recent-presentations-">Atividades Recentes:</h2>
