--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
       </ul>
       <section id="container-holder">
         <div id="container">
-          <div class="javascript performance nodejs"><a href="https://ojack.github.io/articles/live-lab/index.html">Live Lab<img src="https://ojack.github.io/articles/live-lab/mix.png" alt="img01">
+          <div class="javascript performance nodejs"><a href="https://pamelapaulinocerejo.github.io/duodeno.github.io/articles/live-lab/index.html">Live Lab<img src="https://ojack.github.io/articles/live-lab/mix.png" alt="img01">
               <div id="thumb-title">Live&nbsp;Lab</div></a></div>
-          <div class="javascript"><a href="https://ojack.github.io/articles/pixelsynth/index.html">PIXELSYNTH<img src="https://ojack.github.io/articles/pixelsynth/thumb3.png" alt="img01">
+          <div class="javascript"><a href="https://pamelapaulinocerejo.github.io/duodeno.github.io/articles/pixelsynth/index.html">PIXELSYNTH<img src="https://ojack.github.io/articles/pixelsynth/thumb3.png" alt="img01">
               <div id="thumb-title"><span class="caps">PIXELSYNTH</span></div></a></div>
-          <div class="c++ performance"><a href="https://ojack.github.io/articles/nodos/index.html">NODOS: cuerpos en expansión<img src="https://ojack.github.io/articles/nodos/cubos2.png" alt="img01">
+          <div class="c++ performance"><a href="https://pamelapaulinocerejo.github.io/duodeno.github.io/articles/nodos/index.html">NODOS: cuerpos en expansión<img src="https://ojack.github.io/articles/nodos/cubos2.png" alt="img01">
               <div id="thumb-title"><span class="caps">NODOS</span>: cuerpos en&nbsp;expansión</div></a></div>
           <div class="javascript cartography"><a href="https://ojack.github.io/articles/maps-for-getting-lost/index.html">maps for getting lost<img src="https://ojack.github.io/articles/maps-for-getting-lost/thumb2.png" alt="img01">
               <div id="thumb-title">maps for getting&nbsp;lost</div></a></div>
