--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </ul>
       <section id="container-holder">
         <div id="container">
-          <div class="javascript performance nodejs"><a href="https://pamelapaulinocerejo.github.io/duodeno.github.io/articles/live-lab/index.html">Live Lab<img src="https://pamelapaulinocerejo.github.io/duodeno.github.io/articles/live-lab/mix.png" alt="img01">
+          <div class="javascript performance nodejs"><a href="https://pamelapaulinocerejo.github.io/duodeno.github.io/articles/proj001/index.html">Teste 001<img src="https://pamelapaulinocerejo.github.io/duodeno.github.io/articles/proj001/1.jpg" alt="img01">
               <div id="thumb-title">Live&nbsp;Lab</div></a></div>
           <div class="javascript"><a href="https://pamelapaulinocerejo.github.io/duodeno.github.io/articles/pixelsynth/index.html">PIXELSYNTH<img src="https://ojack.github.io/articles/pixelsynth/thumb3.png" alt="img01">
               <div id="thumb-title"><span class="caps">PIXELSYNTH</span></div></a></div>
