--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
       </ul>
       <section id="container-holder">
         <div id="container">
-          <div class="javascript performance nodejs"><a href="https://pamelapaulinocerejo.github.io/duodeno.github.io/articles/proj001/index.html">Teste 001<img src="https://pamelapaulinocerejo.github.io/duodeno.github.io/articles/proj001/1.jpg" alt="img01">
-              <div id="thumb-title">Live&nbsp;Lab</div></a></div>
+          <div class="Maker"><a href="https://pamelapaulinocerejo.github.io/duodeno.github.io/articles/proj001/index.html">Teste 001<img src="https://pamelapaulinocerejo.github.io/duodeno.github.io/articles/proj001/1.jpg" alt="img01">
+              <div id="thumb-title">Teste 001</div></a></div>
           <div class="javascript"><a href="https://pamelapaulinocerejo.github.io/duodeno.github.io/articles/pixelsynth/index.html">PIXELSYNTH<img src="https://ojack.github.io/articles/pixelsynth/thumb3.png" alt="img01">
               <div id="thumb-title"><span class="caps">PIXELSYNTH</span></div></a></div>
           <div class="c++ performance"><a href="https://pamelapaulinocerejo.github.io/duodeno.github.io/articles/nodos/index.html">NODOS: cuerpos en expansión<img src="https://ojack.github.io/articles/nodos/cubos2.png" alt="img01">
