--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
           <div class="Maker"><a href="https://pamelapaulinocerejo.github.io/duodeno.github.io/articles/proj001/index.html">Teste 001<img src="https://pamelapaulinocerejo.github.io/duodeno.github.io/articles/proj001/1.jpg" alt="img01">
               <div id="thumb-title">Teste 001</div></a></div>
           <div class="Educação"><a href="https://pamelapaulinocerejo.github.io/duodeno.github.io/articles/pixelsynth/index.html">Teste 002<img src="https://pamelapaulinocerejo.github.io/duodeno.github.io/articles/proj001/2.jpg" alt="img01">
-              <div id="thumb-title"><span class="caps">PIXELSYNTH</span></div></a></div>
+              <div id="thumb-title"><span class="caps">Teste 002</span></div></a></div>
           <div class="Maker Educação"><a href="https://pamelapaulinocerejo.github.io/duodeno.github.io/articles/nodos/index.html">Teste 003<img src="https://pamelapaulinocerejo.github.io/duodeno.github.io/articles/proj001/3.jpg" alt="img01">
-              <div id="thumb-title"><span class="caps">NODOS</span>: cuerpos en&nbsp;expansión</div></a></div>
+              <div id="thumb-title"><span class="caps">Teste 003</span></div></a></div>
           
           <div class="javascript cartography"><a href="https://ojack.github.io/articles/maps-for-getting-lost/index.html">maps for getting lost<img src="https://ojack.github.io/articles/maps-for-getting-lost/thumb2.png" alt="img01">
               <div id="thumb-title">maps for getting&nbsp;lost</div></a></div>
