--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
         <li class="filter">Educação</li>
         <li class="filter">Arte</li>
         <li class="filter">Ciência da Computação</li>
-        <li class="filter">maker</li>
+        <li class="filter">Maker</li>
       </ul>
       <section id="container-holder">
         <div id="container">
-          <div class="maker"><a href="https://pamelapaulinocerejo.github.io/duodeno.github.io/articles/proj001/index.html">Teste 001<img src="https://pamelapaulinocerejo.github.io/duodeno.github.io/articles/proj001/1.jpg" alt="img01">
+          <div class="Maker"><a href="https://pamelapaulinocerejo.github.io/duodeno.github.io/articles/proj001/index.html">Teste 001<img src="https://pamelapaulinocerejo.github.io/duodeno.github.io/articles/proj001/1.jpg" alt="img01">
               <div id="thumb-title">Teste 001</div></a></div>
           <div class="Educação"><a href="https://pamelapaulinocerejo.github.io/duodeno.github.io/articles/proj002/index.html">Teste 002<img src="https://pamelapaulinocerejo.github.io/duodeno.github.io/articles/proj002/2.jpg" alt="img01">
               <div id="thumb-title"><span class="caps">Teste 002</span></div></a></div>
