--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </ul>
       <section id="container-holder">
         <div id="container">
-          <div class="Maker"><a href="https://pamelapaulinocerejo.github.io/duodeno.github.io/articles/proj001/index.html">Teste 001<img src="https://pamelapaulinocerejo.github.io/duodeno.github.io/articles/proj001/1.jpg" alt="img01">
+          <div class="Eletrônica"><a href="https://pamelapaulinocerejo.github.io/duodeno.github.io/articles/proj001/index.html">Teste 001<img src="https://pamelapaulinocerejo.github.io/duodeno.github.io/articles/proj001/eletronica_big.jpg" alt="img01">
               <div id="thumb-title">Teste 001</div></a></div>
           <div class="Educação"><a href="https://pamelapaulinocerejo.github.io/duodeno.github.io/articles/proj002/index.html">Teste 002<img src="https://pamelapaulinocerejo.github.io/duodeno.github.io/articles/proj002/2.jpg" alt="img01">
               <div id="thumb-title"><span class="caps">Teste 002</span></div></a></div>
