--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div id="container">
           <div class="Eletrônica"><a href="https://pamelapaulinocerejo.github.io/duodeno.github.io/articles/proj001/index.html">Teste 001<img src="https://pamelapaulinocerejo.github.io/duodeno.github.io/articles/proj001/eletronica_big.jpg" alt="img01">
               <div id="thumb-title">Teste 001</div></a></div>
-          <div class="Educação"><a href="https://pamelapaulinocerejo.github.io/duodeno.github.io/articles/proj002/index.html">Teste 002<img src="https://pamelapaulinocerejo.github.io/duodeno.github.io/articles/proj002/2.jpg" alt="img01">
+          <div class="Eletrônica"><a href="https://pamelapaulinocerejo.github.io/duodeno.github.io/articles/proj002/index.html">Teste 002<img src="https://pamelapaulinocerejo.github.io/duodeno.github.io/articles/proj002/placa4-eletronica-eletronicasa.jpg" alt="img01">
               <div id="thumb-title"><span class="caps">Teste 002</span></div></a></div>
           <div class="Maker Educação"><a href="https://pamelapaulinocerejo.github.io/duodeno.github.io/proj003/nodos/index.html">Teste 003<img src="https://pamelapaulinocerejo.github.io/duodeno.github.io/articles/proj003/3.jpg" alt="img01">
               <div id="thumb-title"><span class="caps">Teste 003</span></div></a></div>
