--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>coletivo duodeno
     </title>
     <link rel="alternate" href="https://pamelapaulinocerejo.github.io/duodeno.github.io/feed.xml" type="application/rss+xml" title="portfolio">
-    <link rel="icon" type="image/png" href="https://pamelapaulinocerejo.github.io/duodeno.github.io/triangle-basic.png">
+    <link rel="icon" type="image/ico" href="https://pamelapaulinocerejo.github.io/duodeno.github.io/fav.ico">
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic|Anonymous+Pro:400,700,400italic,700italic|Merriweather:400,700,300">
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Inconsolata:400,700">
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Rajdhani:400,700,300">
