--- a/archive.html
+++ b/archive.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>contact</title>
     <link rel="alternate" href="https://pamelapaulinocerejo.github.io/duodeno.github.io/feed.xml" type="application/rss+xml" title="portfolio">
-    <link rel="icon" type="image/png" href="https://pamelapaulinocerejo.github.io/duodeno.github.io/triangle-basic.png">
+    <link rel="shortcut icon" href="https://pamelapaulinocerejo.github.io/duodeno.github.io/fav.ico">
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic|Anonymous+Pro:400,700,400italic,700italic|Merriweather:400,700,300">
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Inconsolata:400,700">
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Rajdhani:400,700,300">
