--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
         <li class="filter">Eletrônica</li>
         <li class="filter">Programação</li>
         <li class="filter">Educação</li>
-        <li class="filter">Arte</li>
-        <li class="filter">Ciência da Computação</li>
+        <li class="filter">Artes</li>
         <li class="filter">Maker</li>
       </ul>
       <section id="container-holder">
