--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </ul>
       </div>
     </header>
-    <div id="content">
+    <div id="content0">
       <ul id="filters" class="menuBar">
         <li id="show-all">Mostrar Tudo</li>
         <li class="filter">Eletrônica</li>
@@ -37,6 +37,15 @@
         <li class="filter">Educação</li>
         <li class="filter">Artes</li>
         <li class="filter">Maker</li>
+           <div id="content1">
+      <ul id="filters" class="menuBar">
+        <li id="show-all">Mostrar Tudo</li>
+        <li class="filter">COOPECRIA</li>
+        <li class="filter">COOPEN</li>
+        <li class="filter">L.E.G.A.L.</li>
+        <li class="filter">LabTOP</li>
+        <li class="filter">LED</li>
+      </ul>
       </ul>
       <section id="container-holder">
         <div id="container">
