--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <li class="filter">Programação</li>
         <li class="filter">Educação</li>
         <li class="filter">Artes</li>
-        <li class="filter"><a href="https://github.com/pamelapaulinocerejo/duodeno.github.io/blob/master/Maker/code.html">Maker</a></li>
+        <li class="filter"><a href=https://github.com/pamelapaulinocerejo/duodeno.github.io/blob/master/code.html>Maker</a></li>
       </ul>
       <section id="container-holder">
         <div id="container">
