--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>coletivo duodeno
+    <title>67830485_371711583508613_7081536743295418368_n.png
     </title>
     <link rel="alternate" href="https://pamelapaulinocerejo.github.io/duodeno.github.io/feed.xml" type="application/rss+xml" title="portfolio">
     <link rel="shortcut icon" href="https://pamelapaulinocerejo.github.io/duodeno.github.io/fav.ico">
