--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>67830485_371711583508613_7081536743295418368_n.png
+    <title>KANGRAM
     </title>
     <link rel="alternate" href="https://pamelapaulinocerejo.github.io/duodeno.github.io/feed.xml" type="application/rss+xml" title="portfolio">
     <link rel="shortcut icon" href="https://pamelapaulinocerejo.github.io/duodeno.github.io/fav.ico">
@@ -23,7 +23,7 @@
     <header class="header">
       <div class="menu">
         <ul id="topBar" class="menuBar">
-          <li id="name"><a href="https://pamelapaulinocerejo.github.io/duodeno.github.io">coletivo duodeno</a></li>
+          <li id="name"><a href="https://pamelapaulinocerejo.github.io/duodeno.github.io">67830485_371711583508613_7081536743295418368_n.png</a></li>
           <li><a href="https://pamelapaulinocerejo.github.io/duodeno.github.io">Projetos</a></li>
           <li><a href="https://pamelapaulinocerejo.github.io/duodeno.github.io/archive.html">Contato</a></li>
         </ul>
