--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <header class="header">
       <div class="menu">
         <ul id="topBar" class="menuBar">
-          <li id="name"><a href="https://pamelapaulinocerejo.github.io/duodeno.github.io"><a href="https://github.com/pamelapaulinocerejo/duodeno.github.io/blob/master/67830485_371711583508613_7081536743295418368_n.png"></a></li>
+          <li id="name"><a href="https://pamelapaulinocerejo.github.io/duodeno.github.io"><img src="https://github.com/pamelapaulinocerejo/duodeno.github.io/blob/master/67830485_371711583508613_7081536743295418368_n.png"></a></li>
           <li><a href="https://pamelapaulinocerejo.github.io/duodeno.github.io">Projetos</a></li>
           <li><a href="https://pamelapaulinocerejo.github.io/duodeno.github.io/archive.html">Contato</a></li>
         </ul>
