--- a/index.html
+++ b/index.html
@@ -6,26 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>KANGRAM
     </title>
-    <link rel="alternate" href="https://pamelapaulinocerejo.github.io/duodeno.github.io/feed.xml" type="application/rss+xml" title="portfolio">
-    <link rel="shortcut icon" href="https://pamelapaulinocerejo.github.io/duodeno.github.io/fav.ico">
+    <link rel="alternate" href="https://pamelapaulinocerejo.github.io/kangram.github.io/feed.xml" type="application/rss+xml" title="portfolio">
+    <link rel="shortcut icon" href="https://pamelapaulinocerejo.github.io/kangram.github.io/fav.ico">
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic|Anonymous+Pro:400,700,400italic,700italic|Merriweather:400,700,300">
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Inconsolata:400,700">
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Rajdhani:400,700,300">
-    <link rel="stylesheet" href="https://pamelapaulinocerejo.github.io/duodeno.github.io/css/newstyle.css">
-    <link rel="stylesheet" href="https://pamelapaulinocerejo.github.io/duodeno.github.io/css/isotope.css">
+    <link rel="stylesheet" href="https://pamelapaulinocerejo.github.io/kangram.github.io/css/newstyle.css">
+    <link rel="stylesheet" href="https://pamelapaulinocerejo.github.io/kangram.github.io/css/isotope.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-    <script type="text/javascript" src="https://pamelapaulinocerejo.github.io/duodeno.github.io/js/jquery.min.js"></script>
-    <script type="text/javascript" src="https://pamelapaulinocerejo.github.io/duodeno.github.io/js/jquery.slug.js"></script>
-    <script src="https://pamelapaulinocerejo.github.io/duodeno.github.io/js/isotope.pkgd.min.js"></script>
-    <script type="text/javascript" src="https://pamelapaulinocerejo.github.io/duodeno.github.io/js/index.js"></script>
+    <script type="text/javascript" src="https://pamelapaulinocerejo.github.io/kangram.github.io/js/jquery.min.js"></script>
+    <script type="text/javascript" src="https://pamelapaulinocerejo.github.io/kangram.github.io/js/jquery.slug.js"></script>
+    <script src="https://pamelapaulinocerejo.github.io/kangram.github.io/js/isotope.pkgd.min.js"></script>
+    <script type="text/javascript" src="https://pamelapaulinocerejo.github.io/kangram.github.io/js/index.js"></script>
   </head>
   <body>
     <header class="header">
       <div class="menu">
         <ul id="topBar" class="menuBar">
-          <li id="name"><a href="https://pamelapaulinocerejo.github.io/duodeno.github.io"><img src="https://github.com/pamelapaulinocerejo/kangram.github.io/blob/master/67830485_371711583508613_7081536743295418368_n.png></a></li>
-          <li><a href="https://pamelapaulinocerejo.github.io/duodeno.github.io">Projetos</a></li>
-          <li><a href="https://pamelapaulinocerejo.github.io/duodeno.github.io/archive.html">Contato</a></li>
+          <li id="name"><a href="https://pamelapaulinocerejo.github.io/kangram.github.io"><img src="https://github.com/pamelapaulinocerejo/kangram.github.io/blob/master/67830485_371711583508613_7081536743295418368_n.png></a></li>
+          <li><a href="https://pamelapaulinocerejo.github.io/kangram.github.io">Projetos</a></li>
+          <li><a href="https://pamelapaulinocerejo.github.io/kangram.github.io/archive.html">Contato</a></li>
         </ul>
       </div>
     </header>
@@ -36,15 +36,15 @@
         <li class="filter">Programação</li>
         <li class="filter">Educação</li>
         <li class="filter">Artes</li>
-        <li class="filter"><a href=https://github.com/pamelapaulinocerejo/duodeno.github.io/blob/master/code.html>Maker</a></li>
+        <li class="filter"><a href=https://github.com/pamelapaulinocerejo/kangram.github.io/blob/master/code.html>Maker</a></li>
       </ul>
       <section id="container-holder">
         <div id="container">
-          <div class="Eletrônica"><a href="https://pamelapaulinocerejo.github.io/duodeno.github.io/articles/proj001/index.html">Teste 001<img src="https://pamelapaulinocerejo.github.io/duodeno.github.io/articles/proj001/eletronica_big.jpg" alt="img01">
+          <div class="Eletrônica"><a href="https://pamelapaulinocerejo.github.io/kangram.github.io/articles/proj001/index.html">Teste 001<img src="https://pamelapaulinocerejo.github.io/duodeno.github.io/articles/proj001/eletronica_big.jpg" alt="img01">
               <div id="thumb-title">Teste 001</div></a></div>
-          <div class="Eletrônica"><a href="https://pamelapaulinocerejo.github.io/duodeno.github.io/articles/proj002/index.html">Teste 002<img src="https://pamelapaulinocerejo.github.io/duodeno.github.io/articles/proj002/placa4-eletronica-eletronicasa.jpg" alt="img01">
+          <div class="Eletrônica"><a href="https://pamelapaulinocerejo.github.io/kangram.github.io/articles/proj002/index.html">Teste 002<img src="https://pamelapaulinocerejo.github.io/duodeno.github.io/articles/proj002/placa4-eletronica-eletronicasa.jpg" alt="img01">
               <div id="thumb-title"><span class="caps">Teste 002</span></div></a></div>
-          <div class="Maker Educação"><a href="https://pamelapaulinocerejo.github.io/duodeno.github.io/proj003/nodos/index.html">Teste 003<img src="https://pamelapaulinocerejo.github.io/duodeno.github.io/articles/proj003/maker.jpg" alt="img01">
+          <div class="Maker Educação"><a href="https://pamelapaulinocerejo.github.io/kangram.github.io/proj003/nodos/index.html">Teste 003<img src="https://pamelapaulinocerejo.github.io/duodeno.github.io/articles/proj003/maker.jpg" alt="img01">
               <div id="thumb-title"><span class="caps">Teste 003</span></div></a></div>
           
           <div class="javascript cartography"><a href="https://ojack.github.io/articles/maps-for-getting-lost/index.html">maps for getting lost<img src="https://ojack.github.io/articles/maps-for-getting-lost/thumb2.png" alt="img01">
