--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
     <header class="header">
       <div class="menu">
         <ul id="topBar" class="menuBar">
-          <li id="name"><a href="https://pamelapaulinocerejo.github.io/kangram.github.io"><img src="https://github.com/pamelapaulinocerejo/kangram.github.io/blob/master/67830485_371711583508613_7081536743295418368_n.png></a></li>
+      <div id="logo"><a href="https://pamelapaulinocerejo.github.io/kangram.github.io"><img src="https://github.com/pamelapaulinocerejo/kangram.github.io/blob/master/67830485_371711583508613_7081536743295418368_n.png></a></li>
+      <div id="superior">
+      </div>
+        <li id="name"></li>
           <li><a href="https://pamelapaulinocerejo.github.io/kangram.github.io">Projetos</a></li>
           <li><a href="https://pamelapaulinocerejo.github.io/kangram.github.io/archive.html">Contato</a></li>
         </ul>
@@ -73,7 +76,9 @@
         <div class="nav">
         </div>
         <section class="copy">
-          <p>&copy; 2018 Coletivo Duodeno</p>
+         <div id="inferior">
+         </div>
+          <p>&copy; 2019 KANGRAM</p>
         </section>
       </div>
     </footer>
