--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
         <li class="filter">Programação</li>
         <li class="filter">Educação</li>
         <li class="filter">Artes</li>
-        <li class="filter"><a href=https://github.com/pamelapaulinocerejo/kangram.github.io/blob/master/code.html>Maker</a></li>
+        <li class="filter">Maker</li>
+       
       </ul>
       <section id="container-holder">
         <div id="container">
